<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">和外勤</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="app_icon_tip">app_icon</string>


    <string name="app_upgrade_confirm">确定</string>
    <string name="app_upgrade_later">稍后更新</string>
    <string name="app_upgrade_cancel">取消</string>
    <string name="check_new_version">发现新版本,确定更新吗?</string>
    <string name="check_new_version_title">检查新版本</string>
    <string name="check_new_version_message">正在获取新版本 ....</string>
    <string name="check_new_version_no_network">未找到网络连接，请设置后重试!</string>
    <string name="check_new_version_null">未找到新版本信息，请稍后再试!</string>
    <string name="check_new_version_exception">获取新版本信息出错，请稍后再试!</string>
    <string name="check_new_version_latest">已经是最新版本!BEESSOFT技术支持。</string>
    <string name="app_upgrade_download_sucess">新版本下载成功,开始安装.</string>
    <string name="app_upgrade_download_fail">新版本下载失败，请稍后再试.</string>

    <string name="leave">离开登记</string>


    <string name="action_settings">设置</string>
    <string name="action_share">分享</string>
    <string name="action_target">分局日报</string>
    <string name="action_material">员工手册</string>
    <string name="action_home">主页</string>
    <string name="action_photo">照片查询</string>
    <string name="action_arrange">安排查询</string>
    <string name="action_add">增加</string>
    <string name="action_todo">待办</string>
    <string name="action_done">已完成</string>
    <string name="action_yesterday">上个工作日计划</string>
    <string name="action_read">阅读日志</string>
    <string name="action_unread">未读</string>
    <string name="action_notice_read">已读</string>
    <string name="action_mileage">里程情况</string>
    <string name="action_leaveinfo">离开区域</string>
    <string name="action_search">搜索</string>
    <string name="action_submit">确认</string>

    <string name="activity_login">登录</string>

    <string name="activity_checkin">上班签到</string>
    <string name="activity_checkin_untap">上班签到</string>
    <string name="activity_checkout">下班签退</string>
    <string name="activity_checkout_untap">下班签退</string>
    <string name="activity_checkquery">考勤查询</string>
    <string name="activity_checkquery_untap">考勤查询</string>

    <string name="activity_reach">到达现场</string>
    <string name="activity_reach_untap">到达现场</string>
    <string name="activity_leave">离开现场</string>
    <string name="activity_leave_untap">离开现场</string>
    <string name="activity_visitquery">拜访记录</string>
    <string name="activity_visitquery_untap">拜访记录</string>

    <string name="activity_photo">信息采集</string>
    <string name="activity_photoquery">信息查询</string>
    <string name="activity_mywork">待办事项</string>
    <string name="activity_mymileage">我的里程</string>
    <string name="activity_approvequery">审批查询</string>
    <string name="activity_approve">工作审批</string>
    <string name="activity_askleaveapprove">待审批请假</string>
    <string name="activity_workquery">日志查询</string>
    <string name="activity_location">员工位置</string>
    <string name="activity_sales">店员手册</string>
    <string name="activity_boss">老板手册</string>
    <string name="activity_workbook">员工手册</string>
    <string name="activity_company">公司日报</string>
    <string name="activity_branch">分局日报</string>
    <string name="activity_changepassword">修改密码</string>
    <string name="activity_share">分享</string>
    <string name="activity_checkapprove">签到审批</string>
    <string name="activity_collect">信息采集</string>
    <string name="activity_askleave">请假登记</string>
    <string name="activity_askleavequery">请假查询</string>
    <string name="activity_querymaplist">有效点距离</string>
    <string name="activity_arrange">安排工作</string>
    <string name="activity_arrangequery">安排查询</string>
    <string name="activity_mymemo">备忘录</string>
    <string name="activity_notice">通知</string>
    <string name="activity_terminal">终端管理</string>
    <string name="activity_todo">渠道拜访</string>
    <string name="activity_confirm">待确认日志</string>
    <string name="activity_read">阅读日志</string>
    <string name="activity_detail">离线明细</string>
    <string name="activity_leaveinfo">离开区域</string>
    <string name="activity_targetquery">目标查询</string>
    <string name="activity_advise">意见反馈</string>
    <string name="title_activity_note">一线记事本</string>
    <string name="title_activity_note_add">新增记事本</string>
    <string name="title_activity_note_addr">地点选择</string>
    <string name="title_activity_note_query">查询记事本</string>
    <string name="title_activity_note_query_detail">查询明细</string>
    <string name="title_activity_note_deal">计划处理</string>
    <string name="activity_research">信息收集</string>
    <string name="activity_storeresearch">商铺信息</string>
    <string name="activity_personresearch">商铺个人信息</string>
    <string name="activity_houseresearch">小区居民信息</string>
    <string name="activity_specail">专项执行</string>
    <string name="activity_specail_approve">专项审批</string>

    <string name="dy_wrong_mes">德阳提交失败，请联系管理员</string>


    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>


    <string name="check">考勤打卡</string>
    <string name="mywork">待办事项</string>
    <string name="visit">拜访记录</string>
    <string name="askleave">请假登记</string>
    <string name="info_collect">信息采集</string>
    <string name="check_collect">考勤点采集</string>
    <string name="location">员工位置</string>
    <string name="note">一线记事本</string>
    <string name="mileage">我的里程</string>
    <string name="nearby">附近</string>

</resources>