<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/photo_btn"
            style="@style/FragmentButton"
            android:layout_alignTop="@+id/mywork_btn"
            android:layout_marginRight="35dp"
            android:layout_toLeftOf="@+id/mywork_btn"
            android:drawableTop="@drawable/photo"
            android:text="@string/activity_photo" />

        <Button
            android:id="@+id/mywork_btn"
            style="@style/FragmentButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:drawableTop="@drawable/mywork"
            android:text="@string/activity_mywork" />

        <Button
            android:id="@+id/checkquery_btn"
            style="@style/FragmentButton"
            android:layout_alignTop="@+id/mywork_btn"
            android:layout_marginLeft="35dp"
            android:layout_marginStart="35dp"
            android:layout_toEndOf="@+id/mywork_btn"
            android:layout_toRightOf="@+id/mywork_btn"
            android:drawableTop="@drawable/activity_checkquery"
            android:text="@string/activity_checkquery" />

        <Button
            android:id="@+id/mileage_btn"
            style="@style/FragmentButton"
            android:layout_alignLeft="@+id/location_btn"
            android:layout_alignStart="@+id/location_btn"
            android:layout_below="@+id/location_btn"
            android:layout_marginTop="35dp"
            android:drawableTop="@drawable/mymileage"
            android:text="@string/activity_mymileage" />

        <Button
            android:id="@+id/location_btn"
            style="@style/FragmentButton"
            android:layout_alignBaseline="@+id/note_btn"
            android:layout_alignBottom="@+id/note_btn"
            android:layout_alignLeft="@+id/photo_btn"
            android:layout_alignStart="@+id/photo_btn"
            android:drawableTop="@drawable/worklocation"
            android:text="@string/activity_location" />

        <Button
            android:id="@+id/note_btn"
            style="@style/FragmentButton"
            android:layout_alignTop="@+id/visitquery_btn"
            android:layout_centerHorizontal="true"
            android:drawableTop="@drawable/note"
            android:text="@string/title_activity_note" />

        <Button
            android:id="@+id/visitquery_btn"
            style="@style/FragmentButton"
            android:layout_marginTop="33dp"
            android:drawableTop="@drawable/activity_visitquery"
            android:text="@string/activity_visitquery"
            android:layout_below="@+id/checkquery_btn"
            android:layout_alignLeft="@+id/checkquery_btn"
            android:layout_alignStart="@+id/checkquery_btn" />

    </RelativeLayout>

</ScrollView>