<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_bg"
        android:orientation="vertical">

        <LinearLayout style="@style/TextOutLayout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/main_logo" />
        </LinearLayout>


        <LinearLayout
            style="@style/TextOutLayout"
            android:background="@drawable/info_bg">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/company_txt"
                    style="@style/mainTxt"/>

                <TextView
                    android:id="@+id/depart_txt"
                    style="@style/mainTxt"/>

                <TextView
                    android:id="@+id/name_txt"
                    style="@style/mainTxt" />

                <TextView
                    android:id="@+id/tel_txt"
                    style="@style/mainTxt" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/check_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/main_uncheckin" />

                <TextView
                    android:id="@+id/time_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/check_img"
                    android:layout_centerHorizontal="true"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/check_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/time_txt"
                    android:layout_centerHorizontal="true"
                    android:textColor="@android:color/white"/>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">


            <Button
                android:id="@+id/check_btn"
                style="@style/mainButton"
                android:drawableTop="@drawable/main_check"
                android:text="@string/check" />

            <Button
                android:id="@+id/mywork_btn"
                style="@style/mainButton"
                android:drawableTop="@drawable/main_mywork"
                android:text="@string/mywork" />

            <Button
                android:id="@+id/visit_btn"
                style="@style/mainButton"
                android:drawableTop="@drawable/main_visit"
                android:text="@string/visit" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <Button
                android:id="@+id/askleave_btn"
                style="@style/mainButton"
                android:drawableTop="@drawable/main_askleave"
                android:text="@string/askleave" />

            <Button
                android:id="@+id/info_collect_btn"
                style="@style/mainButton"
                android:drawableTop="@drawable/main_info_collect"
                android:text="@string/info_collect" />

            <Button
                android:id="@+id/check_collect_btn"
                style="@style/mainButton"
                android:drawableTop="@drawable/main_check_collect"
                android:text="@string/check_collect" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <Button
                android:id="@+id/location_btn"
                style="@style/mainButton"
                android:drawableTop="@drawable/main_location"
                android:text="@string/location" />

            <Button
                android:id="@+id/note_btn"
                style="@style/mainButton"
                android:drawableTop="@drawable/main_note"
                android:text="@string/note" />

            <Button
                android:id="@+id/mileage_btn"
                style="@style/mainButton"
                android:drawableTop="@drawable/main_mileage"
                android:text="@string/mileage" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>